--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         }
         
         header {
-            background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('images/cover.jpg');
+            background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('cover.jpg');
             background-size: cover;
             background-position: center;
             color: white;
