--- a/yala.html
+++ b/yala.html
@@ -53,7 +53,7 @@
         
         .destination-header {
             height: 500px;
-            background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url('images/yala.jpg');
+            background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url('yala.jpg');
             background-size: cover;
             background-position: center;
             color: white;
@@ -358,16 +358,16 @@
             <h2>Yala Photo Gallery</h2>
             <div class="gallery-grid">
                 <div class="gallery-image">
-                    <img src="images/leopard.jpg" alt="Leopard in Yala">
+                    <img src="leopard.jpg" alt="Leopard in Yala">
                 </div>
                 <div class="gallery-image">
-                    <img src="images/elephant.jpg" alt="Elephant in Yala">
+                    <img src="elephant.jpg" alt="Elephant in Yala">
                 </div>
                 <div class="gallery-image">
-                    <img src="images/landscape.jpg" alt="Yala Landscape">
+                    <img src="landscape.jpg" alt="Yala Landscape">
                 </div>
                 <div class="gallery-image">
-                    <img src="images/peacock.jpg" alt="Peacock in Yala">
+                    <img src="peacock.jpg" alt="Peacock in Yala">
                 </div>
             </div>
         </div>
