--- a/index.html
+++ b/index.html
@@ -450,7 +450,7 @@
                 
                 <div class="destination-card">
                     <div class="card-image">
-                        <img src="iArugam Bay.jpg" alt="Arugam Bay">
+                        <img src="Arugam Bay.jpg" alt="Arugam Bay">
                     </div>
                     <div class="card-content">
                         <h3>Arugam Bay</h3>
