--- a/wilpattu.html
+++ b/wilpattu.html
@@ -53,7 +53,7 @@
         
         .destination-header {
             height: 500px;
-            background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url('images/wilpattu.jpg');
+            background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url('wilpattuwa.jpg');
             background-size: cover;
             background-position: center;
             color: white;
